# cspm

./: Cargo.toml  LICENSE  README.md  TODO.txt
src/: cli.rs  common.rs  confres.rs  core.rs  external_tools.rs  glb_core.rs  lock.rs  macros.rs  main.rs  manifest.rs  parser.rs  paths.rs  prj_core.rs  registry.rs  utils.rs
templates/: .gitignore  lockfile_template.toml  main_template.csd  main_template.udo  manifest_template.toml  module_indexes.json  remote_registry_index.json
