[package]
name = "cspm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
directories = "6.0.0"
flate2 = "1.1.9"
fs_extra = "1.3.0"
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tar = "0.4.44"
toml = "1.0.3"
walkdir = "2.5.0"
